...
        searchBar.textDidChange = {[weak self] text in
            guard let self = self else { return}
            self.viewModel.searchForArticle(by: text)
        }
    }
    func setupAccessibilityIdentifier(){
        self.tableView.accessibilityIdentifier = "newsListTableView"
        self.searchBar.accessibilityIdentifier = "newsListSearchBar"
    }
    //MARK: Show loding Bar
    private func showLoading() {
        tableView.isUserInteractionEnabled = false
        activityIndicator.startAnimating()
    }
...
